Initial commit: Financial Management System with Spring Boot